# SJHacks-2025

./: .gitignore  README.md  next.config.ts  package.json  run_traffic_system.py
agents/: __init__.py  agent_manager.py  camera_integration.py  controller_agent.py  light1.json  light2.json  main.py  models.py  pyproject.toml  requirements.txt  run.bat  run.sh  simulation.py  traffic_agent.py  traffic_light_1.py  traffic_light_2.py  traffic_light_3.py
agents/config/: intersections.json
backend/: descriptions.json  main.py  requirements.txt  run.py  start.py
frontend/: README copy.md  next.config.ts  package-lock.json
frontend/data/: descriptions.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/cameras/: page.tsx
frontend/src/app/intersections/: page.tsx
frontend/src/app/schedule/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/cameras/: CameraViewer.tsx
frontend/src/hooks/: useCameraStats.ts  useTrafficLights.ts  useVideoStream.ts
frontend/src/lib/: mapbox-globals.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/alerts/: page.tsx
src/app/cameras/: page.tsx
src/app/intersections/: page.tsx
src/app/notifications/: page.tsx
src/app/schedule/: page.tsx
src/app/settings/: page.tsx
src/components/alerts/: AlertPanel.tsx
src/components/dashboard/: DashboardLayout.tsx  IntersectionControl.tsx  StatisticsPanel.tsx
src/components/map/: MapboxContainer.tsx  TrafficMap.tsx
src/components/ui/: Header.tsx  MobileMenu.tsx  Sidebar.tsx
(+6 files in other folders)
